# ws-5000-forwarder

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  gunicorn.conf.py  pyproject.toml
tests/: README.md
tests/acceptance/: README.md  __init__.py
tests/integration/: README.md  conftest.py  docker-compose.test.yml  run-integration-tests.sh  run-tests-local.sh  test_influxdb_integration.py  test_integration.py
tests/integration/setup/: setup-limited-token.sh  wait-for-influxdb.sh
tests/unit/: README.md
