[project]
name = "ws-5000-forwarder"
version = "0.1.1"
description = "A Flask application that forwards ecowitt-formatted weather data from WS-5000 stations to InfluxDB"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.1",
    "gunicorn>=23.0.0",
    "influxdb-client>=1.49.0",
    "pytz>=2025.2",
]

[project.scripts]
ws-5000-forwarder = "app:app"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
    "requests>=2.32.4",
]
